# sitecheckout

./: .gitignore  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac  license.txt  package.json  process.json  server.js
client/: app.js  router.js
client/forms/: login.js  payPalExpressConfirm.js  payPalExpressForm.js  signatureForm.js  stripeConfirm.js  stripeForm.js
client/models/: cms.js  error.js  localStorageModel.js  login.js  me.js  pageContext.js  payment.js
client/pages/: base.js  checkout.js  login.js
client/util/: canvasDraw.js  lazysizes.js
client/views/: chargeConfirm.js  errors.js  main.js  payPalFlow.js  paymentFlow.js  stripeFlow.js
config/: default.json  production.json
stylesheets/: _variables.styl
stylesheets/app/: main.styl
templates/: body.pug  head.pug
templates/includes/: chargeConfirm.pug  checkboxInput.pug  errors.pug  formInput.pug  payPalFlow.pug  stripeFlow.pug
templates/pages/: checkout.pug  login.pug
